
(ocamllex (modules lexiCNF))

(menhir
 (flags (--only-tokens))
 (modules tokens_iCNF)
)

(menhir
 (flags (--explain --table --external-tokens Tokens_iCNF))
 (modules tokens_iCNF parseiCNF)
 (merge_into parseiCNF)
)

(rule
  (target syntax_messages.ml)
  (deps   (:tokens tokens_iCNF.mly)
          (:parser parseiCNF.mly)
          (:msg syntax.messages))
  (action (with-stdout-to %{target}
          (run menhir --external-tokens Tokens_iCNF %{tokens}
                      %{parser} --base %{parser} --compile-errors %{msg})))
)

(library
  (name           dolmen_icnf)
  (public_name    dolmen.icnf)
  (libraries      dolmen_std dolmen_intf menhirLib)
  (modules        Tokens_iCNF LexiCNF ParseiCNF Ast_iCNF Syntax_messages Dolmen_icnf)
)

; Convenience rule to generate a fresh messages file,
; and update an already existing one.
(rule
  (target new.messages)
  (mode   promote-until-clean)
  (deps   (:tokens tokens_iCNF.mly)
          (:parser parseiCNF.mly))
  (action (with-stdout-to %{target}
          (run menhir --external-tokens Tokens_iCNF %{tokens}
                      %{parser} --base %{parser} --list-errors)))
)

(rule
  (target updated.messages)
  (mode   promote-until-clean)
  (deps   (:tokens tokens_iCNF.mly)
          (:parser parseiCNF.mly)
          (:msg syntax.messages))
  (action (with-stdout-to %{target}
          (run menhir --external-tokens Tokens_iCNF %{tokens}
                      %{parser} --base %{parser} --update-errors %{msg})))
)

; Additional rule to add to runtest a check that the messages file is up-to-date
(rule
  (alias runtest)
  (deps   (:tokens tokens_iCNF.mly)
          (:parser parseiCNF.mly)
          (:new new.messages)
          (:msg syntax.messages))
  (action (run menhir --external-tokens Tokens_iCNF %{tokens}
                      %{parser} --base %{parser} --compare-errors %{new} --compare-errors %{msg}))
)
