
; Language library definition
(library
  (name           dolmen_icnf)
  (public_name    dolmen.icnf)
  (instrumentation (backend bisect_ppx))
  (libraries      dolmen_std dolmen_intf menhirLib)
  (modules        Dolmen_icnf Tokens Lexer Parser Ast Syntax_messages)
)

; Common include
(include ../dune.common)
