
(ocamllex
 (modules lexTptp)
)

(menhir
 (infer true)
 (flags (--explain --table --external-tokens Tokens_tptp tokens_tptp.mly))
 (modules parseTptp)
)

(menhir
 (flags (--only-tokens))
 (modules tokens_tptp)
)

(library
  (name            dolmentptp)
  (public_name     dolmentptp)
  (libraries       dolmenstandard menhirLib)
  (modules

Tokens_tptp

; Tptp language
Tptp
LexTptp
ParseTptp
Ast_tptp

  )
  ;(wrapped false)
  (wrapped (transition "Warning"))
)