
(ocamllex (modules lexZf))

(menhir
 (flags (--only-tokens))
 (modules tokens_zf)
)

(menhir
 (flags (--explain --table --external-tokens Tokens_zf))
 (modules tokens_zf parseZf)
 (merge_into parseZf)
)


(library
  (name           dolmen_zf)
  (public_name    dolmen.zf)
  (libraries      dolmen_std menhirLib)
  (modules        Tokens_zf LexZf ParseZf Ast_zf Dolmen_zf)
)
