
; Language library definition
(library
  (name           dolmen_zf)
  (public_name    dolmen.zf)
  (instrumentation (backend bisect_ppx))
  (libraries      dolmen_std dolmen_intf menhirLib)
  (modules        Dolmen_zf Tokens Lexer Parser Ast Syntax_messages)
)

; Common include
(include ../dune.common)
